# HomeworkKPO2

./: CMakeLists.txt  README.md  docker-compose.yml
AntiplagiatSystem/: README.md  build_all.sh  check_nginx.sh  docker-compose.yml  init.sql  nginx.conf
AntiplagiatSystem/analysis-service/: CMakeLists.txt  Dockerfile
AntiplagiatSystem/analysis-service/src/: analyzer.cpp  analyzer.h  database.cpp  database.h  main.cpp
AntiplagiatSystem/api-gateway/: CMakeLists.txt  Dockerfile
AntiplagiatSystem/api-gateway/src/: gateway.cpp  gateway.h  main.cpp
AntiplagiatSystem/file-service/: CMakeLists.txt  Dockerfile
AntiplagiatSystem/file-service/src/: database.cpp  database.h  file_handler.cpp  file_handler.h  main.cpp
api-gateway/: .dockerignore  .gitignore  docker-compose.yml  nginx.conf  postman-collection.json
api-gateway/common/: CMakeLists.txt
api-gateway/common/include/: database.hpp  models.hpp  utils.hpp
api-gateway/common/src/: database.cpp
api-gateway/orders-service/include/: CMakeLists.txt  Dockerfile  config.json  message_queue.hpp  order_service.hpp  outbox_processor.hpp
api-gateway/orders-service/src/: database.cpp  main.cpp  message_gueue.cpp  order_service.cpp  outbox_processor.cpp
api-gateway/payments-service/include/: CMakeLists.txt  Dockerfile  config.json  database.hpp  inbox_processor.hpp  message_queue.hpp  outbox_processor.hpp  payment_service.hpp
api-gateway/payments-service/src/: database.cpp  inbox_processor.cpp  main.cpp  message_queue.cpp  outbox_processor.cpp  payment_service.cpp
api-gateway/src/: App.tsx  Dockerfile  package-lock.json  package.json
api-gateway/src/src/: index.css
api-gateway/websocket-service/: .dockerignore
api-gateway/websocket-service/include/: CMakeLists.txt  Dockerfile  config.json  message_queue.hpp  notification_manager.hpp  websocket_server.hpp
api-gateway/websocket-service/src/: main.cpp  message_queue.cpp  notification_manager.cpp  websocket_server.cpp
common/: CMakeLists.txt
common/include/: database.hpp
frontend/src/: App.tsx  Dockerfile
homework4/api-gateway/: .gitignore  postman-collection.json
homework4/api-gateway/common/include/: models.hpp  utils.hpp
homework4/api-gateway/common/src/: database.cpp
homework4/api-gateway/orders-service/include/: CMakeLists.txt  Dockerfile  order_service.hpp
homework4/api-gateway/orders-service/src/: main.cpp  message_gueue.cpp
homework4/api-gateway/payments-service/include/: CMakeLists.txt  config.json  inbox_processor.hpp  message_queue.hpp  outbox_processor.hpp  payment_service.hpp
homework4/api-gateway/payments-service/src/: database.cpp  payment_service.cpp
homework4/api-gateway/src/: index.html  package.json
homework4/api-gateway/websocket-service/include/: config.json  message_queue.hpp
homework4/api-gateway/websocket-service/src/: websocket_server.cpp
include/: commands.hpp  domain.hpp  facades.hpp
orders-service/include/: config.json  message_queue.hpp  outbox_processor.hpp
orders-service/src/: database.cpp  order_service.cpp  outbox_processor.cpp
payments-service/include/: Dockerfile
payments-service/src/: inbox_processor.cpp  main.cpp  outbox_processor.cpp
src/: CMakeLists.txt  analytics.cpp  export_visitors.cpp  repository.cpp
tests/: CMakeLists.txt
websocket-service/include/: CMakeLists.txt  DockerFile  notification_manager.hpp  websocket_server.hpp
websocket-service/src/: main.cpp  notification_manager.cpp
